force-app/main/default/objects/FieldInfo__c/FieldInfo__c.object-meta.xml
<CustomObject>
    <label>FieldInfo</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>FieldInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>