force-app/main/default/objects/FieldInfo__c/fields/field_name__c.field-meta.xml
<CustomField>
    <fullName>field_name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>