force-app/main/default/objects/FieldInfo__c/fields/field_type__c.field-meta.xml
<CustomField>
    <fullName>field_type__c</fullName>
    <label>Field Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>