force-app/main/default/objects/FieldInfo__c/fields/is_show__c.field-meta.xml
<CustomField>
    <fullName>is_show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show</label>
    <type>Checkbox</type>
</CustomField>