force-app/main/default/objects/FieldInfo__c/fields/label_name__c.field-meta.xml
<CustomField>
    <fullName>label_name__c</fullName>
    <label>Label Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>