force-app/main/default/objects/FieldInfo__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>