force-app/main/default/objects/FieldInfo__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>Width</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>